# kiosk-controller

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: example.core.yaml  example.full.yaml
docs/: AI_AGENT_CONTEXT.md  ARCHITECTURE.md  CHANGELOG.md  OVERLAY_UI.md  SECURITY_TLS.md  SETUP_RPI_OS_BOOKWORM.md
scripts/: dbus_override.py
src/kiosk_control/: __init__.py  cdp.py  cli.py  config.py  controller.py  dbus_service.py  paths.py  policy.py
src/kiosk_control/plugins/: base.py  homeassistant.py  input_activity.py  manager.py  nightscout.py
src/kiosk_control/system/: backlight.py  power.py
src/kiosk_overlay/: __init__.py  cli.py  dbus_client.py  model.py
tests/: test_backlight_and_overlay.py  test_cdp.py  test_config.py  test_imports.py  test_policy.py  test_ruff.py  test_user_data_dir.py
